@@ -60,6 +60,10 @@ namespace Mono.Cecil.Binary {
 
 	public sealed class HintNameTable : IBinaryVisitable {
 
+		public const string RuntimeMainExe = "_CorExeDll";
+		public const string RuntimeMainDll = "_CorExeMain";
+		public const string RuntimeCorEE = "mscoree.dll";
+
 		public ushort Hint;
 		public string RuntimeMain;
 		public string RuntimeLibrary;
